API AI Flutter integrated
